1.4.2
  - Windows / MacOS: update to libgit2 1.3.0

1.4.1
  - Fix compile error with some older version of libgit2
  - MacOS: automatically use static libs when building in CI

1.4.0
  - Windows / MacOS: update to libgit2 1.2.0
  - New function git_branch_move()
  - git_branch_checkout gains 'orphan' parameter

1.3.2
  - Fix unit test because GitHub has disabled user/pass auth

1.3.1
  - Windows: fix build for ucrt toolchains
  - Solaris: disable https cert verfication

1.3.0
  - Some encoding fixes for latin1 paths, especially non-ascii Windows usernames.

1.2.0
  - New git_stat_files() function.

1.1.0
  - On x86_64 Linux systems where libgit2 is too old or unavailable, we automatically
    try to download a precompiled static version of libgit2. This includes CentOS 7/8
    as well as Ubuntu 16.04 and 18.04. Therefore the PPA should no longer be needed.
    You can opt-out of this by setting an envvar: USE_SYSTEM_LIBGIT2=1
  - Add tooling to manually find and set the location of the system SSL certificates
    on such static builds, and also for Solaris.
  - Add several functions to work with submodules.
  - Globally enable submodule-caching for faster diffing.
  - Refactor internal code to please rchk analysis tool.

1.0.2
  - git_branch_list() gains a parameter 'local'
  - Windows / MacOS: update to libgit2 1.1.0
  - Do not use bash in configure

1.0.1
  - git_branch_list() and git_commit_info() gain a date field
  - Bug fixes

1.0
  - Lots of new functions
  - Windows and MacOS now ship with libgit2-1.0.0
  - Do not advertise HTTPS support in startup message because it should
    always be supported.
  - Config setters return previous value invisibly (#37)
  - Conflicted files are reported by git_status() (#40)
  - Windows: libgit2 now finds ~/.gitconfig under $USERPROFILE (instead of Documents)
  - A git_signature object is now stored as a string instead of an externalptr
  - The 'name' parameter in git_remote_ functions has been renamed to 'remote'

0.3