@@ -1,5 +1,5 @@
 test_that("cloning repositories works", {
-  skip_if_offline()
+  skip_if_offline('github.com')
   path <- file.path(tempdir(), 'gert')
   repo <- git_clone('https://github.com/r-lib/gert', path = path)
   expect_true(file.exists(file.path(path, 'DESCRIPTION')))
